syntax = "proto3";

package chay;

service ChaydService {
  rpc GetHealth(ChaydServiceGetHealthRequest)
      returns (ChaydServiceGetHealthResponse);
}

message ChaydServiceGetHealthRequest {}

message ChaydServiceGetHealthResponse {}
